--- a/package.json
+++ b/package.json
@@ -22,16 +22,12 @@
   "license": "ISC",
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.6",
-    "@types/crypto-js": "^3.1.43",
     "axios": "^0.19.2",
-    "crypto-js": "^3.1.9-1",
-    "express": "^4.17.1",
+    "crypto": "^1.0.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-hot-loader": "^4.12.12",
-    "react-router-dom": "^4.3.1",
-    "react-transition-group": "^4.0.0",
-    "webpack-dev-middleware": "^3.7.1"
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -46,7 +42,6 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.4",
     "chalk": "^2.4.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -54,9 +49,6 @@
     "cross-spawn": "^6.0.5",
     "css-loader": "^1.0.0",
     "detect-port": "^1.3.0",
-    "eslint": "^5.5.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.5.0",
     "fs-extra": "^7.0.0",
