--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@antv/f2": "^3.5.0",
     "@hot-loader/react-dom": "^16.8.6",
     "axios": "^0.19.2",
     "crypto": "^1.0.1",
