--- a/package.json
+++ b/package.json
@@ -72,5 +72,9 @@
     "webpack": "^4.20.2",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.1.9"
+  },
+  "home": {
+    "development": "/",
+    "production": "./"
   }
 }
