--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@antv/f2": "^3.5.0",
     "@hot-loader/react-dom": "^16.8.6",
+    "@types/node": "^13.9.0",
     "axios": "^0.19.2",
     "copy-webpack-plugin": "^5.1.1",
     "crypto": "^1.0.1",
