usability improvement & add loading progress on finished orders page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
       "components/*": ["components/*"],
       "utils": ["utils"],
       "App": ["App"]
-    }
+    },
+    "types": [
+      "node"
+    ]
   },
   "include": ["./src/**/*"],
   "typeRoots": ["./src/@types", "./node_modules/@types"]
